welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value ||
      if(nums(k+1)==nums(k)+5 && nums(k+2)==nums(k)-1)||{
                                                      ^has271:12: error: type mismatch;
 found   : Boolean
 required: Int
      if (nums(k==2) && nums(k)==7){
                ^has271:13: error: value ==- is not a member of Int
        if (nums(k+2)==1 ||  nums(k+2)==2 || nums(k+2)==0 || nums(k+2)==-1 || nums(k+2)==3){
                                                                      ^has271:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (k<-0 to n-3){
        ^